--- a/src/components/BlogCard/BlogCard.module.scss
+++ b/src/components/BlogCard/BlogCard.module.scss
@@ -37,6 +37,7 @@
 	text-align: center;
 	text-overflow: ellipsis;
 	width: 100%;
+	word-break: break-word;
 }
 
 .readBlogLink {
@@ -72,15 +73,4 @@
 	font-size: 14px;
 	font-weight: bold;
 	margin: 0;
-}
-
-.date {
-	color: #333;
-	font-size: 14px;
-	font-weight: bold;
-	margin-block: 8px;
-
-	&:last-of-type {
-		margin-top: 0;
-	}
 }
