--- a/src/components/BlogView/BlogView.module.scss
+++ b/src/components/BlogView/BlogView.module.scss
@@ -88,14 +88,10 @@
 	margin: 0;
 }
 
-.date {
-	font-size: 14px;
-	font-weight: bold;
-}
-
 .content {
 	border-top: 1px solid lightgray;
 	font-size: 16px;
 	padding-top: 8px;
 	white-space: pre-wrap;
+	word-break: break-word;
 }
